# pinocchio_lambda_vm

./: .gitignore  .rusty-hook.toml  Cargo.toml  Dockerfile  Makefile  README.md  cuda-shell.nix
.github/: CODEOWNERS
arkworks_adapter/: Cargo.toml  README.md
arkworks_adapter/src/: bls6_6_fq.rs  fq5.rs  integration_tests.rs  lib.rs  main.rs  test_utils.rs
src/: lib.rs  main.rs
src/circuits/: mod.rs  qap.rs  r1cs.rs  test_utils.rs
src/math/: cyclic_group.rs  elliptic_curve.rs  field_element.rs  field_extension_element.rs  group.rs  group_element.rs  mod.rs  msm.rs  polynomial.rs
src/pinocchio/: mod.rs  proof.rs  prover.rs  setup.rs  verifier.rs
tests/: pinocchio.rs
