[package]
name = "arkworks_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinocchio_vm = { path = "../" }
ark-r1cs-std = { version = "^0.3.1"}
ark-ff = { version = "^0.3.0" }
ark-bn254 = {version = "^0.3.0"}
ark-bls12-377= {version = "^0.3.0"}

ark-relations = { version = "^0.3.0" }
num-bigint = { version = "0.4", default-features = false }
